# autoscripts-csv

./: .gitignore  CHANGELOG.md  README.md  input.csv  pyproject.toml
.github/workflows/: ci.yml
src/autoscripts_csv/: cli.py  core.py
src/autoscripts_csv/core/: __init__.py  drop.py  filter.py  notify.py
src/autoscripts_csv/poc/common/: notify.py
src/autoscripts_csv/poc/common/tests/: test_notify_common.py
src/autoscripts_csv/poc/micro01_http/: README.md  cli.py  http_client.py  http_to_slack.py
src/autoscripts_csv/poc/micro01_http/tests/: test_http_client.py  test_http_to_slack.py
src/autoscripts_csv/poc/micro02_pdf/: README.md  cli.py  extractor.py  extractor_proof_of_concept.py
src/autoscripts_csv/poc/micro02_pdf/tests/: test_extractor.py  test_micro02_cli.py
tests/: test_core.py  test_dummy.py
tests/test_core/: test_cli.py  test_drop.py  test_filter.py  test_notify.py
