[project]
name = "autoscripts-csv"
version = "0.1.0"
description = ""
authors = [
    {name = "yamanora",email = "yamanora125@gmail.com"}
]

packages = [
    { include = "autoscripts_csv" }
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
ruff = "^0.11.8"

[tool.poetry.scripts]
autoscripts-csv = "autoscripts_csv.cli:main"

[tool.ruff]
fix = true
line-length = 88


[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]


[tool.coverage.run]
source = ["autoscripts_csv"]

[tool.coverage.report]
omit = ["tests/*"]